# pobfuscatory

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg
examples/project/obfuscated/: CWHQ.py  __main__.py
examples/project/obfuscated/LCECGJETPXOPPWAD/: WDCJQP.py  __main__.py
examples/project/obfuscated/OAEJJIKHQ/: CBKMCUOQ.py  __main__.py
examples/single_file/obfuscated/: VGWPPEYHANJ.py
examples/single_file/raw/: hello_world.py
src/pobfuscatory/: obfuscator.py
src/pyobfuscator/: __main__.py  obfuscator.py
tests/: test_confuse.py  test_function.py  test_insert.py  test_scan.py  test_utils.py
tests/source/: case.py  classes.py  comment.py  function.py  imports.py  multi_comment.py  special_arg.py
tests/source/package/: foo.py
tests/source/package/bar/: __init__.py  bar.py  zoo.py
